frontend: fix feetarget and input element error styling
Feetarget with long error text could break onto next line.

This caused the whole Feetarget component to look broken.

--- a/frontends/web/src/components/forms/input.module.css
+++ b/frontends/web/src/components/forms/input.module.css
@@ -88,10 +88,11 @@
 
 .errorText {
     color: var(--color-softred) !important;
+    text-transform: capitalize;
 }
 
-.errorText > span > span {
-    margin-left: 5px;
+.align-right .errorText {
+    text-align: right;
 }
 
 .inputField input[type=number],
